[package]
name = "genesis-core"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../../common/jgenesis-proc-macros" }
jgenesis-common = { path = "../../common/jgenesis-common" }
m68000-emu = { path = "../../cpu/m68000-emu", features = ["bincode"] }
smsgg-core = { path = "../smsgg-core" }
z80-emu = { path = "../../cpu/z80-emu", features = ["bincode"] }

bincode = { workspace = true }
clap = { workspace = true, optional = true }
crc = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
