[package]
name = "genesis-core"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp = { path = "../../common/dsp" }
jgenesis-proc-macros = { path = "../../common/jgenesis-proc-macros" }
jgenesis-common = { path = "../../common/jgenesis-common" }

genesis-config = { path = "../../config/genesis-config" }
smsgg-config = { path = "../../config/smsgg-config" }

m68000-emu = { path = "../../cpu/m68000-emu", features = ["bincode"] }
z80-emu = { path = "../../cpu/z80-emu", features = ["bincode"] }

smsgg-core = { path = "../smsgg-core" }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
