[package]
name = "genesis-core"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp = { workspace = true }
jgenesis-proc-macros = { workspace = true }
jgenesis-common = { workspace = true }

genesis-config = { workspace = true }
smsgg-config = { workspace = true }

m68000-emu = { workspace = true, features = ["bincode"] }
z80-emu = { workspace = true, features = ["bincode"] }

smsgg-core = { workspace = true }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
