[package]
name = "nes-core"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde"]

[dependencies]
jgenesis-common = { path = "../../common/jgenesis-common" }
jgenesis-proc-macros = { path = "../../common/jgenesis-proc-macros" }
mos6502-emu = { path = "../../cpu/mos6502-emu" }
ym-opll = { path = "../ym-opll" }

bincode = { workspace = true }
clap = { workspace = true, optional = true }
crc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[lints]
workspace = true
