[package]
name = "nes-core"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp = { workspace = true }
jgenesis-common = { workspace = true }
jgenesis-proc-macros = { workspace = true }

nes-config = { workspace = true }

mos6502-emu = { workspace = true }

ym-opll = { workspace = true }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
