[package]
name = "s32x-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dsp = { path = "../../common/dsp" }
jgenesis-common = { path = "../../common/jgenesis-common" }
jgenesis-proc-macros = { path = "../../common/jgenesis-proc-macros" }

genesis-config = { path = "../../config/genesis-config" }
smsgg-config = { path = "../../config/smsgg-config" }

m68000-emu = { path = "../../cpu/m68000-emu" }
sh2-emu = { path = "../../cpu/sh2-emu" }
z80-emu = { path = "../../cpu/z80-emu" }

genesis-core = { path = "../genesis-core" }
smsgg-core = { path = "../smsgg-core" }

bincode = { workspace = true, features = ["derive"] }
log = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
