[package]
name = "s32x-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dsp = { workspace = true }
jgenesis-common = { workspace = true }
jgenesis-proc-macros = { workspace = true }

genesis-config = { workspace = true }
smsgg-config = { workspace = true }

m68000-emu = { workspace = true }
sh2-emu = { workspace = true }
z80-emu = { workspace = true }

genesis-core = { workspace = true }
smsgg-core = { workspace = true }

bincode = { workspace = true, features = ["derive"] }
log = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
